new images for PLs

--- a/voyager/static/css/image-import.css
+++ b/voyager/static/css/image-import.css
@@ -175,6 +175,14 @@
 	background-image: url("../images/members/alishan.png");
 }
 
+.megha-picture {
+	background-image: url("../images/members/megha.png");
+}
+
+.stephan-picture {
+	background-image: url("../images/members/stephan.png");
+}
+
 .tommy-picture {
 	background-image: url("../images/members/tommy.png");
 }
