--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -151,13 +151,13 @@
 		<div class="page-container">
 			<div class="executive-box">
 				<div class="executive-member">
-					<div class="executive-picture ajay-picture"></div>
+					<div class="executive-picture lilac-picture"></div>
 					<div class="executive-text">
-						Ajay Shanmugham
+						Lilac Peterson
 					</div>
 					<div class="executive-description">
 						<p>
-							ajaysha@berkeley.edu
+							lilac.peterson@berkeley.edu
 						</p>
 <!-- 						<p>
 							Ajay is a current sophomore who is intending on studying business administration and economics. He grew up in Southern California and is a huge fan of the outdoors. In his free time, Ajay enjoys playing pick up basketball, watching the Lakers, and playing FIFA with his friends.
@@ -165,13 +165,13 @@
 					</div>
 				</div>
 				<div class="executive-member">
-					<div class="executive-picture gwin-picture"></div>
+					<div class="executive-picture alishan-picture"></div>
 					<div class="executive-text">
-						Gwin Zhou
+						Alishan Patel
 					</div>
 					<div class="executive-description">
 						<p>
-							gwinzhou@berkeley.edu
+							alishan.patel@berkeley.edu
 						</p>
 <!-- 						<p>
 							Gwin Zhou is a senior double majoring in Economics and Computer Science. She joined Voyager in the fall of 2014. Gwin grew up in China and spent her first two years in college at the University of Michigan. In her spare time, Gwin enjoys reading, playing bridge (amateur), and going on road trips (as a passenger).
@@ -179,25 +179,25 @@
 					</div>
 				</div>
 				<div class="executive-member">
-					<div class="executive-picture sumedh-picture"></div>
+					<div class="executive-picture stephan-picture"></div>
 					<div class="executive-text">
-						Sumedh Bhattacharya
+						Stephan Liu
 					</div>
 					<div class="executive-description">
 						<p>
 							<!-- Description -->
-							sumedh1234@berkeley.edu
+							stephan.x.liu@gmail.com
 						</p>
 					</div>
 				</div>
 				<div class="executive-member">
-					<div class="executive-picture sanchit-picture"></div>
+					<div class="executive-picture megha-picture"></div>
 					<div class="executive-text">
-						Sanchit Shorewala
+						Megha Bindal
 					</div>
 					<div class="executive-description">
 						<p>
-							sanchit.shorewala@berkeley.edu
+							mbindal@berkeley.edu
 						</p>
 <!-- 						<p>
 							Sanchit is a junior at Cal from New Delhi, India. An Economic and Statistics major, Sanchit is interested in economic systems and institutions. In my spare time Sanchit enjoys reading, stand up comedy and thinking about taking piano lessons over a good cup of cappuccino.
