recruiting calendar upatd

--- a/voyager/templates/recruiting.html
+++ b/voyager/templates/recruiting.html
@@ -20,43 +20,43 @@
 			</tr>
 			<tr>
 				<td> Tabling </td>
-				<td> August 25 - September 11 </td>
+				<td> January 19 - 29 </td>
 				<td> Sproul Plaza </td>
 			</tr>
 			<tr>
 				<td> Voyager First InfoSession </td>
-				<td> September 9 at 7:00pm </td>
+				<td> January 27 at 7:00pm </td>
 				<td> Moffit 101 </td>
 			</tr>
 			<tr>
 				<td> Voyager Second InfoSession </td>
-				<td> September 10 at 7:00pm </td>
+				<td> January 28 at 7:00pm </td>
 				<td> Moffit 101 </td>
 			</tr>
 			<tr>
 				<td> Case Workshop </td>
-				<td> September 11 at 7:00pm </td>
-				<td> Dwinelle 109</td>
+				<td> January 29 at 7:00pm </td>
+				<td> TBD </td>
 			</tr>
 			<tr>
 				<td> App Deadline </td>
-				<td> September 12 - Noon </td>
-				<td> Voyager Website</td>
+				<td> January 29 at 11:59pm </td>
+				<td> Voyager Website </td>
 				<!-- <td> Dwinelle 109 </td> -->
 			</tr>
 			<tr>
 				<td> First Round Interviews </td>
-				<td> September 14 </td>
+				<td> January 31 - February 1 </td>
 				<td> Haas Library </td>
 			</tr>
 			<tr>
-				<td> Meet Voyager </td>
-				<td> September 17 </td>
-				<td> Haas Library </td>
+				<td> Voyager Social Round </td>
+				<td> February 2 </td>
+				<td> TBD </td>
 			</tr>
 			<tr>
 				<td> Second Round Interviews </td>
-				<td> September 18 </td>
+				<td> February 4 </td>
 				<td> Haas Library </td>
 			</tr>
 		</table>
