new picture changes

--- a/voyager/static/css/image-import.css
+++ b/voyager/static/css/image-import.css
@@ -191,6 +191,14 @@
 	background-image: url("../images/members/david.png");
 }
 
+.george-picture {
+	background-image: url("../images/members/george.png");
+}
+
+.himaja-picture {
+	background-image: url("../images/members/himaja.png");
+}
+
 .lilac-picture {
 	background-image: url("../images/members/lilac.png");
 }
