--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -214,29 +214,14 @@
 			<div class="page-container">
 				<div class="executive-box">
 					<div class="executive-member">
-						<div class="executive-picture alishan-picture"></div>
+						<div class="executive-picture himaja-picture"></div>
 						<div class="executive-text">
-							Alishan Patel
+							Himaja Jangle
 						</div>
 						<div class="executive-description">
 							<p>
 								External Manager <br>
-								alishan.patel@berkeley.edu
-							</p>
-	<!-- 						<p>
-								Ajay is a current sophomore who is intending on studying business administration and economics. He grew up in Southern California and is a huge fan of the outdoors. In his free time, Ajay enjoys playing pick up basketball, watching the Lakers, and playing FIFA with his friends.
-							</p> -->
-						</div>
-					</div>
-					<div class="executive-member">
-						<div class="executive-picture margarita-prof-picture"></div>
-						<div class="executive-text">
-							Margarita Oreta
-						</div>
-						<div class="executive-description">
-							<p>
-								External Manager <br>
-								moreta@berkeley.edu
+								himaja.jangle@berkeley.edu
 							</p>
 	<!-- 						<p>
 								Gwin Zhou is a senior double majoring in Economics and Computer Science. She joined Voyager in the fall of 2014. Gwin grew up in China and spent her first two years in college at the University of Michigan. In her spare time, Gwin enjoys reading, playing bridge (amateur), and going on road trips (as a passenger).
@@ -244,14 +229,14 @@
 						</div>
 					</div>
 					<div class="executive-member">
-						<div class="executive-picture lilac-picture"></div>
+						<div class="executive-picture michelle-ling-picture"></div>
 						<div class="executive-text">
-							Lilac Peterson
+							Michelle Ling
 						</div>
 						<div class="executive-description">
 							<p>
 								External Manager <br>
-								lilac.peterson@berkeley.edu
+								michelleling225@berkeley.edu
 							</p>
 	<!-- 						<p>
 								Sanchit is a junior at Cal from New Delhi, India. An Economic and Statistics major, Sanchit is interested in economic systems and institutions. In my spare time Sanchit enjoys reading, stand up comedy and thinking about taking piano lessons over a good cup of cappuccino.
@@ -259,27 +244,27 @@
 						</div>
 					</div>
 					<div class="executive-member">
-						<div class="executive-picture tommy-picture"></div>
+						<div class="executive-picture george-picture"></div>
 						<div class="executive-text">
-							Tommy Nguyen
+							George Wu
 						</div>
 						<div class="executive-description">
 							<p>
 								<!-- Description -->
 								Internal Manager <br>
-								tommynguyen560@berkeley.edu
+								georgextwu@gmail.com
 							</p>
 						</div>
 					</div>
 					<div class="executive-member">
-						<div class="executive-picture david-picture"></div>
+						<div class="executive-picture cherry-picture"></div>
 						<div class="executive-text">
-							David Liu
+							Cherry Wang
 						</div>
 						<div class="executive-description">
 							<p>
 								Internal Manager <br>
-								davidzeyiliu@berkeley.edu
+								jwang0104@berkeley.edu
 							</p>
 	<!-- 						<p>
 								Sanchit is a junior at Cal from New Delhi, India. An Economic and Statistics major, Sanchit is interested in economic systems and institutions. In my spare time Sanchit enjoys reading, stand up comedy and thinking about taking piano lessons over a good cup of cappuccino.
