added michelle picture, added new about pic

--- a/voyager/static/css/image-import.css
+++ b/voyager/static/css/image-import.css
@@ -22,6 +22,10 @@
 	background-image: url("../images/members/matt.jpg");
 }
 
+.michelle-ling-picture {
+	background-image: url("../images/members/michelle.png");
+}
+
 .felix-picture {
 	background-image: url("../images/members/felix.jpg");
 }
