added cherry picture

--- a/voyager/static/css/image-import.css
+++ b/voyager/static/css/image-import.css
@@ -26,6 +26,10 @@
 	background-image: url("../images/members/michelle.png");
 }
 
+.cherry-picture {
+	background-image: url("../images/members/cherry.png");
+}
+
 .felix-picture {
 	background-image: url("../images/members/felix.jpg");
 }
