--- a/voyager/templates/apply.html
+++ b/voyager/templates/apply.html
@@ -17,13 +17,13 @@
 	<!-- <div class="generic-whitespace"></div> -->
 
 	<div class="page-container">
-		<div class="application-portal">
+<!-- 		<div class="application-portal">
 			<p>
 				Application Portal
 			</p>
-		</div>
-		<div class="generic-whitespace"></div>
-<!-- 		<p class="apply-description">
+		</div> -->
+		<!-- <div class="generic-whitespace"></div> -->
+		<p class="apply-description">
 			We are currently working on our application portal. Let us
 			know a little bit about yourself and we'll get back to you
 			when our portal is open!
@@ -43,7 +43,7 @@
 				{{ form.major }}
 			</div>
 			<input type="submit" value="Share!">
-		</form> -->
+		</form>
 	</div>
 </body>
 
