--- a/voyager/templates/recruiting.html
+++ b/voyager/templates/recruiting.html
@@ -35,14 +35,13 @@
 			</tr>
 			<tr>
 				<td> Case Workshop </td>
-				<td> January 29 at 7:00pm </td>
-				<td> TBD </td>
+				<td> January 29 at 8:00pm </td>
+				<td> Dwinelle 229 </td>
 			</tr>
 			<tr>
 				<td> App Deadline </td>
 				<td> January 29 at 11:59pm </td>
 				<td> Voyager Website </td>
-				<!-- <td> Dwinelle 109 </td> -->
 			</tr>
 			<tr>
 				<td> First Round Interviews </td>
