--- a/voyager/templates/table.html
+++ b/voyager/templates/table.html
@@ -1,3 +1,21 @@
+<div class="career-whitespace"></div>
+<div class="toggle-menu">
+	<div class="toggle-row">
+		<span class="year-span"> 2016 </span>
+		<span class="year-span"> 2015 </span>
+		<span class="year-span"> 2014 </span>
+	</div>
+	<div class="toggle-row">
+		<span class="major-span"> Business </span>
+		<span class="major-span"> Engineering </span>
+	</div>
+	<div class="toggle-row">
+		<span class="type-span"> Full-Time </span>
+		<span class="type-span"> Internship </span>
+	</div>
+</div>
+<div class="career-whitespace"></div>
+
 <table class="u-full-width table-style">
 	<tr class="lato-bold">
 		<th> Name </th>
