--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -744,7 +744,7 @@ body {
 
 .career-whitespace {
 	width: 100%;
-	height: 60px;
+	height: 20px;
 }
 
 	/*.career-line-break {
@@ -1168,11 +1168,6 @@ body {
 	position: relative;
 }
 
-.sub-title-container {
-
-}
-
-
 .text-align-right {
 	text-align: right;
 }
@@ -1189,6 +1184,74 @@ body {
 .margin-kill {
 	margin: 0;
 }
+
+
+.toggle-menu {
+	width: 400px;
+	margin: 0 auto;
+}
+
+.toggle-row {
+	margin-top: 5px;
+	width: 100%;
+	/*height: 30px;*/
+	/*border: 3px solid black;*/
+	text-align: center;
+}
+
+.toggle-row span {
+	cursor: pointer;
+}
+
+.toggle-row span:hover {
+	background-color: black;
+	color: white;
+}
+
+.span-selected {
+	background-color: black;
+	color: white;
+}
+
+.year-span {
+	margin-left: 5px;
+	margin-right: 5px;
+	width: 25%;
+	display: inline-block;
+	line-height: 34px;
+	height: 32px;
+	text-align: center;
+	position: relative;
+	border: 1px solid black;
+	border-radius: 5px;
+}
+
+.major-span {
+	margin-left: 5px;
+	margin-right: 5px;
+	width: 40%;
+	display: inline-block;
+	height: 32px;
+	border: 1px solid black;
+	line-height: 34px;
+	text-align: center;
+	position: relative;
+	border-radius: 5px;
+}
+
+.type-span {
+	margin-left: 5px;
+	margin-right: 5px;
+	width: 40%;
+	display: inline-block;
+	line-height: 34px;
+	height: 32px;
+	border: 1px solid black;
+	border-radius: 5px;
+	text-align: center;
+	position: relative;
+}
+
 
 .title-screen {
 	background-color: black;
