--- a/voyager/templates/recruiting.html
+++ b/voyager/templates/recruiting.html
@@ -26,12 +26,12 @@
 			<tr>
 				<td> Voyager First InfoSession </td>
 				<td> January 27 at 7:00pm </td>
-				<td> Moffit 101 </td>
+				<td> Moffitt 101 </td>
 			</tr>
 			<tr>
 				<td> Voyager Second InfoSession </td>
 				<td> January 28 at 7:00pm </td>
-				<td> Moffit 101 </td>
+				<td> Moffitt 101 </td>
 			</tr>
 			<tr>
 				<td> Case Workshop </td>
