--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -554,6 +554,10 @@ body {
 	opacity: 0.3;
 }
 
+.style-gray {
+	background-color: #666666 !important;
+}
+
 .service-text {
 	position: absolute;
 	margin: auto;
