--- a/voyager/templates/services.html
+++ b/voyager/templates/services.html
@@ -23,7 +23,7 @@
 		<div class="executive-panel-title">Industries</div>
 		<!-- <div class="generic-whitespace"></div> -->
 	</div>
-	<div class="service-subject-wrapper style-green">
+	<div class="service-subject-wrapper style-gray">
 		<div class="three columns service-subject-frame tech-picture">
 			Technology
 		</div>
