--- a/voyager/static/css/image-import.css
+++ b/voyager/static/css/image-import.css
@@ -179,6 +179,10 @@
 	background-image: url("../images/members/margarita.png");
 }
 
+.hansen-picture {
+	background-image: url("../images/members/hansen.png");
+}
+
 .alishan-picture {
 	background-image: url("../images/members/alishan.png");
 }
