--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -100,7 +100,7 @@
 					</div>
 				</div>
 				<div class="executive-member">
-					<div class="executive-picture margarita-picture"></div>
+					<div class="executive-picture margarita-prof-picture"></div>
 					<div class="executive-text">
 						Margarita Oreta
 					</div>
@@ -202,6 +202,38 @@
 <!-- 						<p>
 							Sanchit is a junior at Cal from New Delhi, India. An Economic and Statistics major, Sanchit is interested in economic systems and institutions. In my spare time Sanchit enjoys reading, stand up comedy and thinking about taking piano lessons over a good cup of cappuccino.
 						</p> -->
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="generic-whitespace"></div>
+		<div class="title-wrapper style-blue">
+			<div class="executive-panel-title">Account Managers</div>
+		</div>
+		<div class="generic-whitespace"></div>
+		<div class="page-container">
+			<!-- <h2 class="page-title"> Leadership </h2> -->
+			<div class="executive-box">
+				<div class="executive-member">
+					<div class="executive-picture margarita-prof-picture"></div>
+					<div class="executive-text">
+						Margarita Oreta
+					</div>
+					<div class="executive-description">
+						<p>
+							moreta@berkeley.edu
+						</p>
+					</div>
+				</div>
+				<div class="executive-member">
+					<div class="executive-picture hansen-picture"></div>
+					<div class="executive-text">
+						Hansen Sun
+					</div>
+					<div class="executive-description">
+						<p>
+							hansen.sun@berkeley.edu
+						</p>
 					</div>
 				</div>
 			</div>
