--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -829,6 +829,18 @@ body {
 	/*z-index: 0;*/
 }
 
+.thumbnail-test {
+	width: 40px;
+	/*height: 30px;*/
+	/*height: 100%;*/
+	height: 40px;
+	margin: 0;
+	padding: 0;
+	background-color: white;
+	display: inline-block;
+	background-size: cover;
+}
+
 
 .navbar {
 	/*width: 12%;*/
