--- a/voyager/templates/header/navbar.html
+++ b/voyager/templates/header/navbar.html
@@ -1,37 +1,23 @@
-
 <div class="navbar">
-	<div class="navbar-span-list">
-		<div class="lines lines-top"></div>
-		<div class="lines"></div>
-		<div class="lines"></div>
-	</div>
-	<div class="navbar-container">
-	<!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-		<svg class="navbar-logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-			 viewBox="0 0 398.9 122" style="enable-background:new 0 0 398.9 122;" xml:space="preserve">
-		<style type="text/css">
-			.voyager0{fill:none;stroke:#FFFFFF;stroke-width:2;stroke-miterlimit:10;}
-			.voyager1{fill:#FFFFFF;stroke:#FFFFFF;stroke-miterlimit:10;}
-			.st2{fill:#FFFFFF;}
-			.st3{font-family:'Muli';}
-			.st4{font-size:41.2476px;}
-		</style>
-		<path class="voyager0" d="M107,71.9c-5,21.7-24.4,37.8-47.5,37.8c-26.9,0-48.7-21.8-48.7-48.7s21.8-48.7,48.7-48.7
-			c23.4,0,43,16.5,47.7,38.5"/>
-		<polygon class="voyager1" points="52.9,99.4 59,99.4 65.1,99.4 87.8,31.2 81.7,31.2 59,93.3 36.2,31.2 30.1,31.2 "/>
-		<text transform="matrix(1 0 0 1 126.2449 51.7694)"><tspan x="0" y="0" class="st2 st3 st4">VOYAGER</tspan><tspan x="0" y="49.5" class="st2 st3 st4">CONSULTING</tspan></text>
-		</svg>
+</div>
 
+<div class="navbar-logo"></div>
+<div class="navbar-menu-button">
+	<p class="navbar-menu-text"> Menu </p>
+</div>
 
-
-		<div class="navbar-selectors">
-			<div id="navbar-home" class="navbar-selector">Home</div>
-			<div id="navbar-about" class="navbar-selector">About</div>
-			<div id="navbar-careers" class="navbar-selector">Careers</div>
-			<div id="navbar-services" class="navbar-selector">Services</div>
-			<div id="navbar-recruiting" class="navbar-selector">Recruiting</div>
-			<div id="navbar-contact" class="navbar-selector">Contact</div>
-			<div id="navbar-apply" class="navbar-selector">Apply</div>
-		</div>
+<div class="navigation-background"></div>
+<div class="navigation-menu-selection">
+	<div class="inner">
+	  <h2 align="center">MENU</h2>
+	  <ul class="links">
+	    <li id='navbar-home'><a>Home</a></li>
+	    <li id='navbar-about'><a>About</a></li>
+	    <li id='navbar-careers'><a>Careers</a></li>
+	    <li id='navbar-services'><a>Services</a></li>
+	    <li id='navbar-recruiting'><a>Recruiting</a></li>
+	    <li id='navbar-apply'><a>Apply</a></li>
+	  </ul>
+	  <div class="close"></div>
 	</div>
 </div>
