--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -881,14 +881,17 @@ body {
     }
 
     .navbar-logo {
-        background-image: url('../images/navbar-logo.svg');
+        background-image: url('../images/navbar-logo.png');
         background-position: center;
         background-repeat: no-repeat;
+        background-size: cover;
+        /*background-color: black;*/
         position: fixed;
-        height: 42px;
-        margin-top: 4px;
-        width: 200px;
-        z-index: 3;
+        height: 39px;
+        margin-top: 6px;
+        margin-left: 14px;
+        width: 147px;
+        z-index: 7;
     }
 
 
