added voyager green

--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -482,6 +482,10 @@ body {
     background-color: #177b57 !important;
 }
 
+.style-voyager-green {
+    background-color: #197847 !important;
+}
+
 .style-red {
     background-color: #c00 !important;
 }
