--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -21,13 +21,13 @@
 				</p>
 			</div>
 		</div>
-		<div class="six columns about-frame goldengate-picture style-blue">
+		<div class="six columns about-frame goldengate-picture style-voyager-green">
 			<!-- <div class="six columns"> -->
 			<!-- </div> -->
 		</div>
 	</div>
 	<div class="about-panels">
-		<div class="six columns about-frame voyager-culture-picture style-blue">
+		<div class="six columns about-frame voyager-culture-picture style-voyager-green">
 		</div>
 		<div class="six columns about-frame">
 			<div class="about-wrapper">
@@ -59,13 +59,13 @@
 				</p>
 			</div>
 		</div>
-		<div class="six columns about-frame impact-picture style-blue">
+		<div class="six columns about-frame impact-picture style-voyager-green">
 		</div>
 	</div>
 	<!-- <div class="generic-whitespace"></div> -->
 	<div class="about-launch">
 		<div class="sub-title-container"></div>
-		<div class="title-wrapper style-blue">
+		<div class="title-wrapper style-voyager-green">
 			<div class="executive-panel-title">Executives</div>
 		</div>
 		<div class="generic-whitespace"></div>
@@ -144,7 +144,7 @@
 			</div>
 		</div>
 		<div class="generic-whitespace"></div>
-		<div class="title-wrapper style-blue">
+		<div class="title-wrapper style-voyager-green">
 			<div class="executive-panel-title">Project Leaders</div>
 		</div>
 		<div class="generic-whitespace"></div>
@@ -207,7 +207,7 @@
 			</div>
 		</div>
 		<div class="generic-whitespace"></div>
-		<div class="title-wrapper style-blue">
+		<div class="title-wrapper style-voyager-green">
 			<div class="executive-panel-title">Account Managers</div>
 		</div>
 		<div class="generic-whitespace"></div>
@@ -239,7 +239,7 @@
 			</div>
 		</div>
 		<div class="generic-whitespace"></div>
-		<div class="title-wrapper style-blue">
+		<div class="title-wrapper style-voyager-green">
 			<div class="executive-panel-title"> Managers </div>
 		</div>
 		<div class="generic-whitespace"></div>
@@ -335,7 +335,7 @@
 	</div>
 </div>
 <div class="generic-whitespace"></div>
-<div class="title-wrapper style-blue">
+<div class="title-wrapper style-voyager-green">
 	<div class="executive-panel-title">Alumni</div>
 </div>
 <div class="generic-whitespace"></div>
