--- a/voyager/templates/recruiting.html
+++ b/voyager/templates/recruiting.html
@@ -6,7 +6,7 @@
 		<div class="header-overlay"></div>
 	</div>
 	<!-- <div class="generic-whitespace"></div> -->
-	<div class="title-wrapper style-purple">
+	<div class="title-wrapper style-voyager-green">
 		<div class="executive-panel-title">Recruiting Timeline</div>
 	</div>
 	<div id='calendar'></div>
